config/samples/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample
  annotations:
    # Port forward this Service.
    pf.frantj.cc/forward: "yes"
    # Do not port forward 443 and port forward
    # 80 to 3000 instead of 3000 to 3000.
    pf.frantj.cc/port-map: 0:443,80:3000
    # UPnP-specific, optional annotations.
	  upnp.pf.frantj.cc/remote-host: sample
	  upnp.pf.frantj.cc/enabled: "true"
    Default "port-forward <namespace>/<name> port <port.name>"
	  upnp.pf.frantj.cc/description: port-forward
    # The reconcile loop will always requeue
    # half as often as the lease duration.
    # If you make the lease duration sufficiently small,
    # it may not leave the reconcile loop enough time
    # to renew the lease before it expires, leading to
    # blips in the port-forward between when the lease
    # expires and Port Forward renewing it.
    # Default 15m.
	  upnp.pf.frantj.cc/lease-duration: 1h
spec:
  type: LoadBalancer
  ports:
    - name: simple
      port: 80
      targetPort: 6666
    - name: excluded
      port: 443
      targetPort: 7777
    - name: remapped
      port: 3000
      targetPort: 8888
  selector: {}
